clusters/home/internal/adguard/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: router-external
  namespace: home
subsets:
  - addresses:
      - ip: 192.168.1.1
    ports:
      - name: http
        port: 80
