clusters/home/internal/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: router-external
  namespace: home

spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
